--- a/views/currency.erb
+++ b/views/currency.erb
@@ -1,10 +1,9 @@
-<h1>Convert <%= @from_currency %></h1>
-<a href="/">back</a>
+<h1>Convert <%= @original_currency %></h1>
 <ul>
-  <% @currencies.each do |symbol, name| %>
-    <% unless symbol == @from_currency %>
-      <li><a href="/<%= @from_currency %>/<%= symbol %>">Convert 1 <%= @from_currency %> to <%= symbol %>...</a></li>
+  <% @data.fetch("currencies").keys.each do |symbol| %>
+    <% unless symbol == @original_currency %>
+      <li><a href="/<%= @original_currency %>/<%= symbol %>">Convert 1 <%= @original_currency %> to <%= symbol %>...</a></li>
     <% end %>
   <% end %>
 </ul>
-
+<a href="/">Back</a>
